feat: apply run background task
